abdal:membuat navbar dan halaman dashboard

--- a/Frontend/app/styles/style.module.css
+++ b/Frontend/app/styles/style.module.css
@@ -9,7 +9,7 @@
 .header
 {
     display: flex;
-    background-color: #55eb76;
+    background-color: #008d1e;
     /* perataan horizontal */
     justify-content: start;
     /* perataan vertical */
